<resources>
    <string name="app_name">Vital Android</string>

    <string-array name="sleep_notes_array">
        <item>I slept great!</item>
        <item>I got woken up</item>
        <item>Struggled to sleep</item>
        <item>Much needed sleep</item>
        <item>Restful sleep</item>
    </string-array>

    <string name="walking">Walking</string>
    <string name="km">Km</string>
    <string name="cal">Cal</string>
    <string name="kc">Kc</string>
    <string name="ice_skating">Ice Skating</string>
    <string name="swimming">Swimming</string>
    <string name="dancing">Dancing</string>
    <string name="cricket">Cricket</string>
    <string name="biking">Biking</string>
    <string name="yoga">Yoga</string>
    <string name="volleyball">Volley Ball</string>
    <string name="tennis">Tennis</string>
    <string name="choose_platform">Choose Platform</string>
    <string name="health_connect">Health Connect</string>
    <string name="choose_device">Choose Device</string>
    <string name="categories">Categories</string>
    <string name="health_kit">Health Kit</string>
    <string name="back_extension">Back Extension</string>
    <string name="badminton">Badminton</string>
    <string name="shoulder_press">Shoulder Press</string>
    <string name="baseball">Baseball</string>
    <string name="basketball">Basketball</string>
    <string name="bench_press">Bench Press</string>
    <string name="bench_sit_up">Bench Sit Up</string>
    <string name="biking_stationary">Biking Stationary</string>
    <string name="boot_camp">Boot Camp</string>
    <string name="boxing">Boxing</string>
    <string name="burpee">Burpee</string>
    <string name="calesthenics">Calesthenics</string>
    <string name="crunh">Crunh</string>
    <string name="dead_lift">Dead Lift</string>
    <string name="dumbell_curl_left_arm">Dumbell Curl Left Arm</string>
    <string name="dumbell_curl_right_arm">Dumbell Curl Right Arm</string>
    <string name="front_raise">Front Raise</string>
    <string name="lateral_raise">Lateral Raise</string>
    <string name="triceps_extension_left_arm">Triceps Extension Left Arm</string>
    <string name="triceps_extension_right_arm">Triceps Extension Right Arm</string>
    <string name="triceps_extension_two_arm">Triceps Extension Two Arm</string>
    <string name="elliptical">Elliptical</string>
    <string name="elliptical_class">Elliptical Class</string>
    <string name="type_fencing">Type Fencing</string>
    <string name="american_football">American Football</string>
    <string name="australian_football">Australian Football</string>
    <string name="forward_twist">Forward Twist</string>
    <string name="frisbee_disc">Frisbee Disc</string>
    <string name="golf">Golf</string>
    <string name="guided_breathing">Guided Breathing</string>
    <string name="gymnastic">Gymnastic</string>
    <string name="handball">Handball</string>
    <string name="high_intensity_internal_training">High Iintensity Internal Training</string>
    <string name="hiking">Hiking</string>
    <string name="ice_hockey">Ice Hockey</string>
    <string name="jumping_jack">Jumping Jack</string>
    <string name="jump_rope">Jump Rope</string>
    <string name="lat_pull_down">Lat Pull Down</string>
    <string name="lunge">Lunge</string>
    <string name="martial_arts">Martial Arts</string>
    <string name="paddling">Paddling</string>
    <string name="paragliding">Paragliding</string>
    <string name="pilates">Pilates</string>
    <string name="plank">Plank</string>
    <string name="racquetball">Racquet Ball</string>
    <string name="rock_climbing">Rock Climbing</string>
    <string name="roller_hockey">Roller Hockey</string>
    <string name="rowing">Rowing</string>
    <string name="rowing_machine">Rowing Machine</string>
    <string name="rugby">Rugby</string>
    <string name="running">Running</string>
    <string name="running_tradmill">Running Tradmill</string>
    <string name="weightlifting">Weight Lifting</string>
    <string name="wheel_chair">Wheel Chair</string>
    <string name="water_polo">Water Polo</string>
    <string name="upper_twist">Upper Twist</string>
    <string name="table_tennis">Table Tennis</string>
    <string name="surfing">Surfing</string>
    <string name="streching">Streching</string>
    <string name="strength_training">Strength Training</string>
    <string name="stair_climbing_machine">Stair Climbing Machine</string>
    <string name="stair_climbing">Stair Climbing</string>
    <string name="squat">Squat</string>
    <string name="squash">Squash</string>
    <string name="softball">Softball</string>
    <string name="soccer">Soccer</string>
    <string name="snowshoeing">Snow Shoeing</string>
    <string name="snowboarding">Snowboarding</string>
    <string name="skiting">Skitting</string>
    <string name="skating">Skating</string>
    <string name="scuba_diving">Scuba Diving</string>
    <string name="sailing">Sailing</string>
    <string name="average_body_fat">Average Fat</string>
    <string name="average_body_temperature">Average Temperature</string>
    <string name="average_height">Average Height</string>
    <string name="average_heart_rate">Average Heart Rate</string>
    <string name="average_weight">Average Weight</string>
    <string name="average_hydration">Average Hydration</string>
    <string name="average_nutrition">Average Nutrition</string>
    <string name="average_sleep">Average Sleep</string>
    <string name="celcius">C</string>
    <string name="feet">Ft</string>
    <string name="bps">Bps</string>
    <string name="kilo_gram">Kg</string>
    <string name="liter">L</string>
    <string name="alert">Alert</string>
    <string name="install_health_connect">Please download the Health Connect app from the Play Store and give app permission to sync your health data.</string>
    <string name="install">Install</string>
    <string name="ok">Ok</string>
    <string name="activities">Activities</string>
    <string name="total_steps">Total Steps</string>
    <string name="total_calories">Total Calories</string>
    <string name="total_distance">Total Distance</string>
    <string name="heart_rate">Heart Rate</string>
    <string name="min">Min %1$s</string>
    <string name="max">Max %1$s</string>
    <string name="avg">Avg %1$s</string>
    <string name="he_stats">HR Stats</string>
    <string name="no_activities">No activities</string>
</resources>