<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="excercise"
            type="com.gwl.vitalandroid.health_connect.ExerciseSession" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.main.MainActivity">

        <LinearLayout
            android:id="@+id/txvActivityTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{excercise.exerciseName}"
                android:textSize="21sp"
                android:textColor="@color/black"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=" : "
                android:textSize="21sp"
                android:textColor="@color/black"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{excercise.title}"
                android:textSize="21sp"
                android:textColor="@color/black"/>

        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/black"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@id/txvActivityTitle"/>

        <LinearLayout
            android:id="@+id/llSteps"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@id/txvActivityTitle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/total_steps"
                android:textSize="18sp"
                android:textColor="@color/black"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:textSize="18sp"
                android:text="@{excercise.exerciseSessionData.totalSteps.toString()}"
                android:textColor="@color/black"
                android:gravity="end"/>

        </LinearLayout>
        <LinearLayout
            android:id="@+id/llDistance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@id/llSteps"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/total_distance"
                android:textSize="18sp"
                android:textColor="@color/black"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:textSize="18sp"
                android:text="@{excercise.exerciseSessionData.totalDistance.toString()}"
                android:textColor="@color/black"
                android:gravity="end"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/llCalories"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@id/llDistance"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/total_calories"
                android:textSize="18sp"
                android:textColor="@color/black"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:textSize="18sp"
                android:text="@{excercise.exerciseSessionData.totalEnergyBurned.toString()}"
                android:textColor="@color/black"
                android:gravity="end"/>

        </LinearLayout>


        <TextView
            android:id="@+id/txvHearRate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/heart_rate"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:textColor="@color/black"
            app:layout_constraintTop_toBottomOf="@id/llCalories"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/txvHRStates"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/he_stats"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:layout_marginStart="20dp"
            app:layout_constraintTop_toBottomOf="@id/txvHearRate"
            app:layout_constraintStart_toStartOf="parent" />

        <LinearLayout
            android:id="@+id/llHRStates"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@id/txvHRStates"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@{@string/min(excercise.exerciseSessionData.minHeartRate.toString())}"
                android:textSize="18sp"
                android:textColor="@color/black"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@{@string/max(excercise.exerciseSessionData.minHeartRate.toString())}"
                android:textSize="18sp"
                android:gravity="center"
                android:textColor="@color/black"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="18sp"
                android:text="@{@string/avg(excercise.exerciseSessionData.minHeartRate.toString())}"
                android:textColor="@color/black"
                android:gravity="end"/>

        </LinearLayout>

        <TextView
            android:id="@+id/txvHRSeries"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/he_stats"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:layout_marginStart="20dp"
            app:layout_constraintTop_toBottomOf="@id/txvHearRate"
            app:layout_constraintStart_toStartOf="parent" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>